# relish

./: Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
docs/: schema-migration.md
relish_ascii/: Cargo.toml
relish_ascii/src/: format.rs  lib.rs  parse_binary.rs  value.rs
relish_derive/: Cargo.toml
relish_derive/src/: lib.rs
src/: buf.rs  error.rs  lib.rs  parse.rs  traits.rs  types.rs  write.rs
tests/: derive_test.rs
