[package]
name = "relish"
version = "0.1.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
license = "BSD-3-Clause"
homepage = "https://github.com/alex/relish"
description = "A serialization format and library"

edition = "2024"
rust-version = "1.91.0"

[dependencies]
bytes = "1.11.0"
thiserror = "2.0.17"
relish_derive = { version = "0.1.0", path = "relish_derive" }
chrono = { version = "0.4", optional = true, default-features = false, features = ["std"] }

[features]
default = []
chrono = ["dep:chrono"]

[workspace]
members = ["relish_derive", "relish_ascii"]
