[package]
name = "relish_ascii"
version = "0.1.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
license = "BSD-3-Clause"
homepage = "https://github.com/alex/relish"
description = "A human-readable ASCII format for relish binary data"

edition = "2024"
rust-version = "1.91.0"

[dependencies]
relish = { version = "0.1.0", path = ".." }
bytes = "1.11.0"
